Utilizamos Div y Fuentes

--- a/lenguaje-de-mercado.html
+++ b/lenguaje-de-mercado.html
@@ -3,6 +3,43 @@
 <head>
   <title>Lenguajes de mercadp</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="fonts/stylesheet.css">
+  <style>
+    h1{
+      font-family: 'texas_tango_bold_personal_uRg';
+      font-size: 80px;
+      font-style: normal;
+      /*margin: 30px 5px 2px 40px;*/
+      margin-bottom: 0px;
+      background: darkcyan;
+      padding: 30px;
+    }
+    h2{
+      margin-top: 0px;
+    }
+    p{
+      text-align: center;
+      width: 100%;
+    }
+    .btn{
+      font-family: 'texas_tango_bold_personal_uRg';
+      font-size: 20px;
+      background: darkblue;
+      color: white;
+      padding: 20px 10px 20px 10px;
+      text-decoration: none;
+      border-radius: 5px;
+      border: solid 3px black;
+
+    }
+    .btn:hover{
+      background: white;
+      color: black;
+      border-radius: 7px;
+      border: solid 5px red;
+      font-size: 23px;
+    }
+  </style>
 </head>
 
 
@@ -18,7 +55,9 @@
 </header>
 
 <section>
-  <h1>sLENGUAJES DE MERCADO</h1>
+  <h1>LENGUAJES DE MERCADO WESTERN vaqueros cowboys</h1>
+  <h2>MMM QUE LINDO SON LOS GATOS GORDOS UWU</h2>
+  <p><a href="" class="btn">ENTREMOS LOCOOO</a></p>
   <hr>
   <p>
     <strong>GTGD</strong>, sLENGUAJES DE MERCADO sLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADO LENGUAJES DE MERCADO sLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADO LENGUAJES DE MERCADO sLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADOsLENGUAJES DE MERCADO
