--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 
 <head>
   <title>EL Morito web</title>
-  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100&family=Oswald:wght@300&family=Palette+Mosaic&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-    <a href="index.html">
-        <img src="images/Logo.jpg" alt="">
-    </a>
     <nav>
+      <a href="index.html"> <img src="images/Logo.jpg" alt="" class="logo"></a>
       <ul>
         <li><a href="lenguaje-de-mercado.html">Lenguaje de Mercado</a></li>
         <li><a href="www.google.com">Nosotros</a></li>
@@ -26,9 +25,23 @@
     <h2>Gatitos Gorditos</h2>
     <h3>Gatititos Gordiditos</h3>
     <hr>
+
+    <div class="card">
+      <p>
+        <strong class="final">GTML</strong>, El gato doméstico (Felis silvestris catus), llamado popularmente <a href="lenguaje-de-mercado.html">gato</a>, y de forma coloquial minino, <strong>michino, michi, micho, mizo, miz,  morroño o morrongo</strong>, entre otros nombres, es un mamífero carnívoro de la familia Felidae. Es una subespecie domesticada por la convivencia con el ser humano. El nombre actual en muchas lenguas proviene del latín vulgar catus. Paradójicamente, catus aludía a los gatos salvajes, mientras que los gatos domésticos, en latín, eran llamados felis. Como resultado de mutaciones 
+      </p>
+    </div>
+
+    <div class="card">
+      <p>
+      hay numerosas razas. Algunas, como la raza Sphynx o la Peterbald están desprovistas de pelo; otras carecen de cola, como los gatos de la raza Manx, y algunas tienen coloraciones atípicas, como los llamados gatos azules. El gato se comunica a través de vocalizaciones. Las más populares son su característico maullido y el ronroneo, pero puede aullar, gemir, gruñir y bufar. Además, adopta poses o expresiones que informan, a sus congéneres, sus enemigos o sus cuidadores, de su ánimo o sus intenciones.
+      </p>
+    </div>
+
     <p>
-      <strong class="final">GTML</strong>, El gato doméstico (Felis silvestris catus), llamado popularmente <a href="lenguaje-de-mercado.html">gato</a>, y de forma coloquial minino, <strong>michino, michi, micho, mizo, miz,  morroño o morrongo</strong>, entre otros nombres, es un mamífero carnívoro de la familia Felidae. Es una subespecie domesticada por la convivencia con el ser humano. El nombre actual en muchas lenguas proviene del latín vulgar catus. Paradójicamente, catus aludía a los gatos salvajes, mientras que los gatos domésticos, en latín, eran llamados felis. Como resultado de mutaciones genéticas, cruzamiento y selección artificial, hay numerosas razas. Algunas, como la raza Sphynx o la Peterbald están desprovistas de pelo; otras carecen de cola, como los gatos de la raza Manx, y algunas tienen coloraciones atípicas, como los llamados gatos azules. El gato se comunica a través de vocalizaciones. Las más populares son su característico maullido y el ronroneo, pero puede aullar, gemir, gruñir y bufar. Además, adopta poses o expresiones que informan, a sus congéneres, sus enemigos o sus cuidadores, de su ánimo o sus intenciones.
-    </p>
+      hay numerosas razas. Algunas, como la raza Sphynx o la Peterbald están desprovistas de pelo; otras carecen de cola, como los gatos de la raza Manx, y algunas tienen coloraciones atípicas, como los llamados gatos azules. El gato se comunica a través de vocalizaciones. Las más populares son su característico maullido y el ronroneo, pero puede aullar, gemir, gruñir y bufar. Además, adopta poses o expresiones que informan, a sus congéneres, sus enemigos o sus cuidadores, de su ánimo o sus intenciones.
+      </p>
+
     <h1 class="final">Fin</h1>
     <ul>
       <li>Gato 1</li>
@@ -39,12 +52,11 @@
       <li>Gato dos</li>
     </ol>
     <br>
-    <img src="https://cdn.wamiz.fr/article/images/gato-gordo-blanco.jpg" alt="Gato Gordo">
+    <img class="gatofoto" src="https://cdn.wamiz.fr/article/images/gato-gordo-blanco.jpg" alt="Gato Gordo">
   </section>
 
   <footer>
-    <p>HtmlGatos 2018</p>
-    <p>Gatitos</p>
+    <a>HtmlGatos 2018</a>
   </footer>
 </body>
 
